# Agent-Smith

./: .gitignore  pyproject.toml
src/core/: extraction.py  llm_client.py
tests/: test_extraction.py
